--- a/NotesMarketplace/Content/css/style.css
+++ b/NotesMarketplace/Content/css/style.css
@@ -25,8 +25,14 @@ textarea {
     border-left-width:3px !important;
 }
 
+.bookpicture{
+    height:300px;
+}
+.notedesc {
+    min-height:150px;
+}
 .error {
-    color:red;
+    color: red;
 }
 
 .doflex {
@@ -1016,7 +1022,6 @@ page-item1 {
         border-radius: 50%;
         -webkit-border-radius: 50%;
         -moz-border-radius: 50%;
-        
     }
 
 ul.pagination .active {
